core-infra/init/kustomize/testing/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-glucktek
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.glucktek.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: glucktek-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-gluckhub
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.gluckhub.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: gluckhub-tls
